etc/tree-sitter-mvl/grammar.js
    program: ($) =>
      seq(repeat($.use_decl), repeat($.declaration)),

    // Two structural forms:
    //   1. optional "pub" + non-import decl body (type/fn/const/extern/impl)
    //   2. reexport_decl — carries its own "pub" to stay unambiguous vs use_decl
    declaration: ($) =>
      choice(
        seq(
          optional("pub"),
          choice(
            $.type_decl,
            $.fn_decl,
            $.const_decl,
            $.extern_decl,
            $.impl_decl,
            $.actor_decl
          )
        ),
        $.reexport_decl
      ),

    // === Modules and imports ===
    // One file = one module (file=module, no inline module blocks).
    // Module name = filename without extension.

    // `use std.io.{File, Path};` — private import (top of file only)
    use_decl: ($) => seq("use", $.module_path, optional(";")),

    // `pub use std.io.File;` — re-export; "pub" is part of the rule so it
    // remains unambiguous with use_decl (which never has "pub").
    reexport_decl: ($) => seq("pub", "use", $.module_path, optional(";")),

    module_path: ($) =>
      seq(
        $.identifier,
        repeat(seq(choice(".", "::"), $.identifier)),
        optional(
          seq(".", "{", $.identifier, repeat(seq(",", $.identifier)), optional(","), "}")
        )
      ),

    // Impl block: `impl Trait [ TypeParams ] for Type { fn_decls }`
    impl_decl: ($) =>
      seq(
        "impl",
        $.identifier,
        optional(seq("[", $.type_list, "]")),
        "for",
        $.identifier,
        "{",
        repeat($.fn_decl),
        "}"
      ),

    // Actor declaration (Phase 8, #63):
    // `actor Name { field: Type, …  pub fn behavior(…) { … }  fn helper(…) -> T { … } }`
    extern_decl: ($) =>
      seq("extern", $.string_literal, "{", repeat($.extern_fn_decl), "}"),

    // Function signature inside an extern block (no body — semicolon instead)
    extern_fn_decl: ($) =>
      seq(
        "fn",
        $.identifier,
        "(",
        optional($.param_list),
        ")",
        "->",
        $.type_expr,
        optional(seq("!", $.effect_list)),
        ";"
      ),

    // === Type declarations ===

    type_decl: ($) =>
      seq("type", $.identifier, optional($.type_params), "=", $.type_body),

    type_params: ($) =>
      seq("<", $.identifier, repeat(seq(",", $.identifier)), ">"),

    type_body: ($) => choice($.struct_body, $.enum_body, $.type_expr),

    struct_body: ($) =>
      seq(
        "struct",
        "{",
        repeat($.field_decl),
        "}",
        optional(seq("with", "invariant", $.refinement))
      ),

    enum_body: ($) =>
      seq(
        "enum",
        "{",
        $.variant,
        repeat(seq(",", $.variant)),
        optional(","),
        "}"
      ),

    variant: ($) =>
      seq(
        $.identifier,
        optional(
          choice(
            seq("(", $.type_list, ")"),
            seq("{", $.field_list, "}")
          )
        )
      ),

    field_decl: ($) =>
      seq(
        $.identifier,
        ":",
        $.type_expr,
        optional(seq("where", $.refinement)),
        optional(",")
      ),

    field_list: ($) => seq($.field_decl, repeat($.field_decl)),

    // === Function declarations ===

    fn_decl: ($) =>
      seq(
        optional("transparent"),
        optional(choice($.totality, "builtin")),
        optional($.security_modifier),
        optional("test"),
        "fn",
        $.identifier,
        optional($.type_params),
        "(",
        optional($.param_list),
        ")",
        "->",
        $.return_type,
        optional(seq("!", $.effect_list)),
        optional(seq("where", $.constraints)),
        repeat($.contract_clause),
        optional($.block) // builtin fns have no body; required for non-builtin
      ),

    totality: ($) => choice("total", "partial"),

    // Contract clauses: `requires pred` / `ensures pred` (Phase 5, #628)
    param_list: ($) =>
      seq($.param, repeat(seq(",", $.param)), optional(",")),

    param: ($) =>
      seq(
        optional($.capability),
        $.identifier,
        ":",
        $.type_expr,
        optional(seq("where", $.refinement))
      ),

    capability: ($) => choice("iso", "val", "ref", "tag"),

    return_type: ($) =>
      seq($.type_expr, optional(seq("where", $.refinement))),

    effect_list: ($) => seq($.effect, repeat(seq("+", $.effect))),

    effect: ($) =>
      seq(
        $.identifier,
        optional(seq("(", $.string_literal, ")"))
      ),

    type_expr: ($) =>
      choice(
        $.refined_type,
        $.fn_type,
        $.tuple_type,
        $.option_type,
        $.result_type,
        $.ref_type,
        $.labeled_type,
        $.base_type
      ),

    base_type: ($) =>
      seq($.identifier, optional(seq("<", $.type_list, ">"))),

    option_type: ($) => seq("Option", "<", $.type_expr, ">"),

    result_type: ($) =>
      seq("Result", "<", $.type_expr, ",", $.type_expr, ">"),

    ref_type: ($) => seq(choice("val", "ref"), $.type_expr),

    labeled_type: ($) => seq($.security_label, "<", $.type_expr, ">"),

    security_label: ($) => choice("Public", "Tainted", "Secret", "Clean"),

    refined_type: ($) => prec(1, seq($.base_type, "where", $.refinement)),

    fn_type: ($) =>
      seq(
        "fn",
        "(",
        optional($.type_list),
        ")",
        "->",
        $.type_expr,
        optional(seq("!", $.effect_list))
      ),

    type_list: ($) => seq($.type_expr, repeat(seq(",", $.type_expr))),

    // === Refinement predicates ===
    // Structured with precedence to avoid left-recursion conflicts.

    refinement: ($) => $.ref_expr,

    ref_expr: ($) =>
      choice(
        prec.left(1, seq($.ref_expr, "||", $.ref_expr)),
        prec.left(2, seq($.ref_expr, "&&", $.ref_expr)),
        prec.left(
          3,
          seq(
            $.ref_expr,
            choice("==", "!=", "<", ">", "<=", ">="),
            $.ref_expr
          )
        ),
        prec.left(4, seq($.ref_expr, choice("+", "-"), $.ref_expr)),
        prec.left(5, seq($.ref_expr, choice("*", "/", "%"), $.ref_expr)),
        prec.right(6, seq("!", $.ref_expr)),
        $.ref_atom
      ),

    ref_atom: ($) =>
      choice(
        seq("len", "(", $.identifier, ")"),
        seq("(", $.ref_expr, ")"),
        $.identifier,
        $.integer_literal,
        $.float_literal
      ),

    // === Statements ===

    // Blocks may end with an implicit return expression (no semicolon),
    // similar to Rust. This is the final expression value of the block.
    block: ($) =>
      seq("{", repeat($.statement), optional($.expr), "}"),

    statement: ($) =>
      choice(
        $.let_stmt,
        $.assign_stmt,
        $.return_stmt,
        $.if_stmt,
        $.match_stmt,
        $.for_stmt,
        $.while_stmt,
        $.expr_stmt
      ),

    let_stmt: ($) =>
      seq(
        "let",
        $.pattern,
        seq(":", $.type_expr),
        "=",
        $.expr,
        ";"
      ),

    // Use expr as lvalue — `=` vs `==` are different tokens, no conflict.
    return_stmt: ($) => seq("return", optional($.expr), ";"),

    match_stmt: ($) =>
      seq("match", $.expr, "{", repeat($.match_arm), "}"),

    match_arm: ($) =>
      seq(
        $.pattern,
        optional(seq("if", $.expr)),
        "=>",
        $.expr,
        optional(",")
      ),

    expr_stmt: ($) => seq($.expr, ";"),

    // === Expressions ===
    // All left-recursive operations (field access, method calls, propagation)
    // are inlined into `expr` with `prec.left` — the standard tree-sitter pattern.

    expr: ($) =>
      choice(
        // Postfix — result/option propagation with `?`
        prec.left(
          PREC.POSTFIX,
          seq(field("operand", $.expr), "?")
        ),
        // Member access: method call (must come before field access — more specific)
        prec.left(
          PREC.CALL,
          seq(
            field("object", $.expr),
            ".",
            field("method", $.identifier),
            "(",
            optional(field("arguments", $.arg_list)),
            ")"
          )
        ),
        // Member access: field read
        prec.left(
          PREC.CALL,
          seq(
            field("object", $.expr),
            ".",
            field("field", $.identifier)
          )
        ),
        // Unary operators (right-associative)
        $.unary_expr,
        // Binary operators
        prec.left(PREC.MUL, seq($.expr, choice("*", "/", "%"), $.expr)),
        prec.left(PREC.ADD, seq($.expr, choice("+", "-"), $.expr)),
        prec.left(PREC.SHIFT, seq($.expr, choice("<<", ">>"), $.expr)),
        prec.left(
          PREC.COMPARE,
          seq($.expr, choice("==", "!=", "<", ">", "<=", ">="), $.expr)
        ),
        prec.left(PREC.BITAND, seq($.expr, "&", $.expr)),
        prec.left(PREC.BITXOR, seq($.expr, "^", $.expr)),
        prec.left(PREC.BITOR, seq($.expr, "|", $.expr)),
        prec.left(PREC.AND, seq($.expr, "&&", $.expr)),
        prec.left(PREC.OR, seq($.expr, "||", $.expr)),
        // Atoms
        $._atom_expr
      ),

    // Unary prefix operators: ! ~ - consume
    borrow_expr: ($) =>
      prec.right(PREC.UNARY, seq(choice("val", "ref"), $.expr)),

    // Atomic (non-recursive) expression forms
    _atom_expr: ($) =>
      choice(
        $.literal,
        $.if_expr,
        $.match_expr,
        $.lambda_expr,
        $.block_expr,
        $.declassify_expr,
        $.sanitize_expr,
        $.construct_expr,
        $.actor_create_expr,
        $.select_expr,
        $.concurrently_expr,
        $.fn_call_expr,
        $.grouped_expr,
        $.path_expr,
        $.borrow_expr,
        $.identifier
      ),

    // Path expression: Enum::Variant or Module::function
    // Used for enum variant access (e.g. AuthError::NotFound).
    fn_call_expr: ($) =>
      prec(1, seq(
        field("function", $.identifier),
        "(",
        optional(field("arguments", $.arg_list)),
        ")"
      )),

    arg_list: ($) =>
      seq($.expr, repeat(seq(",", $.expr)), optional(",")),

    sanitize_expr: ($) => seq("sanitize", "(", $.expr, ")"),

    // Phase 8, #63: `actor TypeName { field: expr, … }` — create actor, returns ActorRef
    pattern: ($) =>
      choice(
        "_",
        $.literal,
        $.tuple_pattern,
        $.some_pattern,
        $.none_pattern,
        $.ok_pattern,
        $.err_pattern,
        $.constructor_pattern,
        $.struct_pattern,
        $.identifier
      ),

    some_pattern: ($) => seq("Some", "(", $.pattern, ")"),

    none_pattern: ($) => "None",

    literal: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.multiline_string_literal,
        $.raw_string_literal,
        $.raw_multiline_string_literal,
        $.char_literal,
        $.boolean_literal,
        $.list_literal,
        $.map_literal,
        $.set_literal
      ),

    integer_literal: ($) => /[0-9]+/,

    // Float must be tried before integer (both start with digits).
    float_literal: ($) => /[0-9]+\.[0-9]+/,

    string_literal: ($) =>
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),

    // `"""…"""` — multiline string (escape sequences processed).
    // Uses token() to avoid lookahead: content is any run of non-quote/non-backslash
    // chars or escape sequences, with 1- or 2-quote runs allowed when followed by
    // more content, plus an optional trailing 1 or 2 quotes before the `"""` close.
    multiline_string_literal: (_) =>
      token(seq(
        '"""',
        /([^"\\]|\\.)*("([^"\\]|\\.)+|""([^"\\]|\\.)+)*(""|")?/,
        '"""',
      )),

    // `r"…"` — raw single-line string (no escape processing).
    raw_string_literal: ($) =>
      seq('r"', repeat(/[^"]/), '"'),

    // `r"""…"""` — raw multiline string (no escape processing).
    // Uses token() to avoid lookahead: same approach as multiline_string_literal
    // but without escape sequences.
    raw_multiline_string_literal: (_) =>
      token(seq(
        'r"""',
        /[^"]*("[^"]+|""[^"]+)*(""|")?/,
        '"""',
      )),

    boolean_literal: ($) => choice("true", "false"),

    map_literal: ($) =>
      seq(
        "{",
        $.expr, ":", $.expr,
        repeat(seq(",", $.expr, ":", $.expr)),
        optional(","),
        "}"
      ),

    // `{"a", "b", …}` — set literal. Two+ elements or trailing comma required
    // to disambiguate from block expressions.
    set_literal: ($) =>
      choice(
        // Two or more elements
        seq("{", $.expr, ",", $.expr, repeat(seq(",", $.expr)), optional(","), "}"),
        // Single element with trailing comma
        seq("{", $.expr, ",", "}")
      ),

    // === Constants ===

    const_decl: ($) =>
      seq("const", $.identifier, ":", $.type_expr, "=", $.expr, ";"),

    // === Lexical ===

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    line_comment: ($) => token(seq("//", /.*/)),
  },
});
