etc/tree-sitter-mvl/test/corpus/basics.txt
===============================================================================
Line comment
===============================================================================

// This is a comment

-------------------------------------------------------------------------------

(program
  (line_comment))

===============================================================================
Boolean literals
===============================================================================

const YES: Bool = true;
const NO: Bool = false;

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (boolean_literal)))))
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (boolean_literal))))))

===============================================================================
Integer literal
===============================================================================

const ZERO: Int = 0;

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (integer_literal))))))

===============================================================================
Float literal
===============================================================================

const PI: Float = 3.14;

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (float_literal))))))

===============================================================================
Type alias — refined
===============================================================================

type UserId = Int where self > 0

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (type_expr
          (refined_type
            (base_type
              (identifier))
            (refinement
              (ref_expr
                (ref_expr
                  (ref_atom
                    (identifier)))
                (ref_expr
                  (ref_atom
                    (integer_literal)))))))))))

===============================================================================
Type — struct
===============================================================================

type Point = struct {
  x: Float,
  y: Float,
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (struct_body
          (field_decl
            (identifier)
            (type_expr
              (base_type
                (identifier))))
          (field_decl
            (identifier)
            (type_expr
              (base_type
                (identifier)))))))))

===============================================================================
Type — enum
===============================================================================

type Color = enum {
  Red,
  Green,
  Blue,
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (enum_body
          (variant
            (identifier))
          (variant
            (identifier))
          (variant
            (identifier)))))))

===============================================================================
Type — enum with tuple variant
===============================================================================

type Shape = enum {
  Circle(Float),
  Rect(Float, Float),
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (enum_body
          (variant
            (identifier)
            (type_list
              (type_expr
                (base_type
                  (identifier)))))
          (variant
            (identifier)
            (type_list
              (type_expr
                (base_type
                  (identifier)))
              (type_expr
                (base_type
                  (identifier))))))))))

===============================================================================
Type — generic parameters
===============================================================================

type Pair<A, B> = struct {
  first: A,
  second: B,
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_params
        (identifier)
        (identifier))
      (type_body
        (struct_body
          (field_decl
            (identifier)
            (type_expr
              (base_type
                (identifier))))
          (field_decl
            (identifier)
            (type_expr
              (base_type
                (identifier)))))))))

===============================================================================
Security-labeled field
===============================================================================

type Credentials = struct {
  username: Public<String>,
  password: Secret<String>,
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (struct_body
          (field_decl
            (identifier)
            (type_expr
              (labeled_type
                (security_label)
                (type_expr
                  (base_type
                    (identifier))))))
          (field_decl
            (identifier)
            (type_expr
              (labeled_type
                (security_label)
                (type_expr
                  (base_type
                    (identifier)))))))))))

===============================================================================
Simple function — total
===============================================================================

total fn add(x: Int, y: Int) -> Int {
  return x + y;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier))))
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (return_stmt
            (expr
              (expr
                (identifier))
              (expr
                (identifier)))))))))

===============================================================================
Function — with effects
===============================================================================

total fn greet(name: String) -> Unit ! Console {
  console.log(name);
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (effect_list
        (effect))
      (block
        (statement
          (expr_stmt
            (expr
              (expr
                (identifier))
              (identifier)
              (arg_list
                (expr
                  (identifier))))))))))

===============================================================================
Function — capability annotation
===============================================================================

total fn use_db(iso db: val DbConn) -> Unit {
  return;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (capability)
          (identifier)
          (type_expr
            (ref_type
              (type_expr
                (base_type
                  (identifier)))))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (return_stmt))))))

===============================================================================
Let binding with type annotation
===============================================================================

total fn example() -> Unit {
  let x: Int = 42;
  let mut y: Int = 0;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (let_stmt
            (pattern
              (identifier))
            (type_expr
              (base_type
                (identifier)))
            (expr
              (literal
                (integer_literal)))))
        (statement
          (let_stmt
            (pattern
              (identifier))
            (type_expr
              (base_type
                (identifier)))
            (expr
              (literal
                (integer_literal)))))))))

===============================================================================
Match — None and Some patterns
===============================================================================

total fn unwrap_or(v: Option<Int>, def: Int) -> Int {
  match v {
    None => def,
    Some(x) => x,
  }
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (option_type
              (type_expr
                (base_type
                  (identifier))))))
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (match_stmt
            (expr
              (identifier))
            (match_arm
              (pattern
                (none_pattern))
              (expr
                (identifier)))
            (match_arm
              (pattern
                (some_pattern
                  (pattern
                    (identifier))))
              (expr
                (identifier)))))))))

===============================================================================
Result propagation with ?
===============================================================================

total fn parse_id(s: String) -> Result<Int, String> {
  let n: Int = parse(s)?;
  Ok(n)
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (result_type
            (type_expr
              (base_type
                (identifier)))
            (type_expr
              (base_type
                (identifier))))))
      (block
        (statement
          (let_stmt
            (pattern
              (identifier))
            (type_expr
              (base_type
                (identifier)))
            (expr
              (expr
                (fn_call_expr
                  (identifier)
                  (arg_list
                    (expr
                      (identifier))))))))
        (expr
          (fn_call_expr
            (identifier)
            (arg_list
              (expr
                (identifier)))))))))

===============================================================================
Lambda expression
===============================================================================

total fn apply(f: fn(Int) -> Int, x: Int) -> Int {
  let result: Int = f(x);
  return result;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (fn_type
              (type_list
                (type_expr
                  (base_type
                    (identifier))))
              (type_expr
                (base_type
                  (identifier))))))
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (let_stmt
            (pattern
              (identifier))
            (type_expr
              (base_type
                (identifier)))
            (expr
              (fn_call_expr
                (identifier)
                (arg_list
                  (expr
                    (identifier)))))))
        (statement
          (return_stmt
            (expr
              (identifier))))))))

===============================================================================
sanitize and declassify
===============================================================================

total fn process(raw: Tainted<String>) -> Clean<String> {
  let clean: Clean<String> = sanitize(raw);
  return clean;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (labeled_type
              (security_label)
              (type_expr
                (base_type
                  (identifier)))))))
      (return_type
        (type_expr
          (labeled_type
            (security_label)
            (type_expr
              (base_type
                (identifier))))))
      (block
        (statement
          (let_stmt
            (pattern
              (identifier))
            (type_expr
              (labeled_type
                (security_label)
                (type_expr
                  (base_type
                    (identifier)))))
            (expr
              (sanitize_expr
                (expr
                  (identifier))))))
        (statement
          (return_stmt
            (expr
              (identifier))))))))

===============================================================================
Use import declaration
===============================================================================

use std::io::File;

-------------------------------------------------------------------------------

(program
  (use_decl
    (module_path
      (identifier)
      (identifier)
      (identifier))))

===============================================================================
Re-export declaration
===============================================================================

pub use geometry::Point;

-------------------------------------------------------------------------------

(program
  (declaration
    (reexport_decl
      (module_path
        (identifier)
        (identifier)))))

===============================================================================
Extern block — rust ABI
===============================================================================

extern "rust" {
    fn hash(data: String) -> String;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (extern_decl
      (string_literal)
      (extern_fn_decl
        (identifier)
        (param_list
          (param
            (identifier)
            (type_expr
              (base_type
                (identifier)))))
        (type_expr
          (base_type
            (identifier)))))))

===============================================================================
Extern block — C ABI with effects
===============================================================================

extern "c" {
    fn read_file(path: String) -> String ! IO, FileRead;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (extern_decl
      (string_literal)
      (extern_fn_decl
        (identifier)
        (param_list
          (param
            (identifier)
            (type_expr
              (base_type
                (identifier)))))
        (type_expr
          (base_type
            (identifier)))
        (effect_list
          (effect)
          (effect))))))

===============================================================================
Multiline string literal
===============================================================================

const MSG: String = """hello
world""";

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (multiline_string_literal))))))

===============================================================================
Raw string literal
===============================================================================

const REGEX: String = r"[a-z]+\d";

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (raw_string_literal))))))

===============================================================================
Raw multiline string literal
===============================================================================

const TEMPLATE: String = r"""line one
line two""";

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)))
      (expr
        (literal
          (raw_multiline_string_literal))))))

===============================================================================
Map literal
===============================================================================

const SCORES: Map<String, Int> = {"alice": 10, "bob": 20};

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)
          (type_list
            (type_expr
              (base_type
                (identifier)))
            (type_expr
              (base_type
                (identifier))))))
      (expr
        (literal
          (map_literal
            (expr
              (literal
                (string_literal)))
            (expr
              (literal
                (integer_literal)))
            (expr
              (literal
                (string_literal)))
            (expr
              (literal
                (integer_literal)))))))))

===============================================================================
Set literal
===============================================================================

const PRIMES: Set<Int> = {2, 3, 5};

-------------------------------------------------------------------------------

(program
  (declaration
    (const_decl
      (identifier)
      (type_expr
        (base_type
          (identifier)
          (type_list
            (type_expr
              (base_type
                (identifier))))))
      (expr
        (literal
          (set_literal
            (expr
              (literal
                (integer_literal)))
            (expr
              (literal
                (integer_literal)))
            (expr
              (literal
                (integer_literal)))))))))

===============================================================================
Impl declaration
===============================================================================

impl Show for Int {
  total fn show(x: Int) -> String {
    return "ok";
  }
}

-------------------------------------------------------------------------------

(program
  (declaration
    (impl_decl
      (identifier)
      (identifier)
      (fn_decl
        (totality)
        (identifier)
        (param_list
          (param
            (identifier)
            (type_expr
              (base_type
                (identifier)))))
        (return_type
          (type_expr
            (base_type
              (identifier))))
        (block
          (statement
            (return_stmt
              (expr
                (literal
                  (string_literal))))))))))

===============================================================================
Borrow expression — shared
===============================================================================

total fn take_ref(x: Int) -> Int {
  let n: Int = ref_id(val x);
  return n;
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (let_stmt
            (pattern
              (identifier))
            (type_expr
              (base_type
                (identifier)))
            (expr
              (fn_call_expr
                (identifier)
                (arg_list
                  (expr
                    (borrow_expr
                      (expr
                        (identifier)))))))))
        (statement
          (return_stmt
            (expr
              (identifier))))))))

===============================================================================
Borrow expression — mutable
===============================================================================

total fn mutate(x: Int) -> Unit {
  update(ref x);
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (base_type
              (identifier)))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (expr_stmt
            (expr
              (fn_call_expr
                (identifier)
                (arg_list
                  (expr
                    (borrow_expr
                      (expr
                        (identifier)))))))))))))
