etc/tree-sitter-mvl/test/corpus/full_programs.txt
===============================================================================
Type aliases with refinements
===============================================================================

type Amount = Float where self >= 0.0
type NonZero = Float where self != 0.0

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (type_expr
          (refined_type
            (base_type
              (identifier))
            (refinement
              (ref_expr
                (ref_expr
                  (ref_atom
                    (identifier)))
                (ref_expr
                  (ref_atom
                    (float_literal))))))))))
  (declaration
    (type_decl
      (identifier)
      (type_body
        (type_expr
          (refined_type
            (base_type
              (identifier))
            (refinement
              (ref_expr
                (ref_expr
                  (ref_atom
                    (identifier)))
                (ref_expr
                  (ref_atom
                    (float_literal)))))))))))

===============================================================================
Function with effects and security labels
===============================================================================

total fn safe_divide(
    numerator: Public<Amount>,
    denominator: Public<NonZero>,
) -> Public<Float> {
    numerator / denominator
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (labeled_type
              (security_label)
              (type_expr
                (base_type
                  (identifier))))))
        (param
          (identifier)
          (type_expr
            (labeled_type
              (security_label)
              (type_expr
                (base_type
                  (identifier)))))))
      (return_type
        (type_expr
          (labeled_type
            (security_label)
            (type_expr
              (base_type
                (identifier))))))
      (block
        (expr
          (expr
            (identifier))
          (expr
            (identifier)))))))

===============================================================================
Enum type with struct variant
===============================================================================

type AuthError = enum {
    NotFound,
    InvalidPassword,
    AccountLocked { attempts: Int, },
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (enum_body
          (variant
            (identifier))
          (variant
            (identifier))
          (variant
            (identifier)
            (field_list
              (field_decl
                (identifier)
                (type_expr
                  (base_type
                    (identifier)))))))))))

===============================================================================
Struct type with security-labeled fields
===============================================================================

type Session = struct {
    token: Secret<String>,
    user_id: Public<UserId>,
}

-------------------------------------------------------------------------------

(program
  (declaration
    (type_decl
      (identifier)
      (type_body
        (struct_body
          (field_decl
            (identifier)
            (type_expr
              (labeled_type
                (security_label)
                (type_expr
                  (base_type
                    (identifier))))))
          (field_decl
            (identifier)
            (type_expr
              (labeled_type
                (security_label)
                (type_expr
                  (base_type
                    (identifier)))))))))))

===============================================================================
Function with match and path expressions
===============================================================================

total fn classify(v: Option<Int>) -> String {
    match v {
        None => "empty",
        Some(x) => "found"
    }
}

-------------------------------------------------------------------------------

(program
  (declaration
    (fn_decl
      (totality)
      (identifier)
      (param_list
        (param
          (identifier)
          (type_expr
            (option_type
              (type_expr
                (base_type
                  (identifier)))))))
      (return_type
        (type_expr
          (base_type
            (identifier))))
      (block
        (statement
          (match_stmt
            (expr
              (identifier))
            (match_arm
              (pattern
                (none_pattern))
              (expr
                (literal
                  (string_literal))))
            (match_arm
              (pattern
                (some_pattern
                  (pattern
                    (identifier))))
              (expr
                (literal
                  (string_literal))))))))))
